syntax = "proto3";

package auth;
option go_package="./v1";

message SignUpRequest {
  string login = 1;
  string password =2;
  uint32 roleId=3;
}
message SignUpResponse{
  uint32 userId = 1;
}

message SignInRequest {
  string login = 1;
  string password =2;
}
message SignInResponse {
  string token = 1;
}

service UserAuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {};
  rpc SignIn (SignInRequest) returns (SignInResponse) {};
}